# AI-Agent

./: .env  .env.example  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.githooks/: pre-commit
.github/workflows/: ci.yml
agent_app/: .gitignore  __init__.py  app.py  config.py  conversation.py  errors.py  llm_profiles.py  main.py  models.py  secrets.py  token_counter.py
agent_app/core/: agent.py  llm.py  llm_status.py
agent_app/tools/: file_tools.py  pdf_tools.py  web_tools.py
agent_app/ui/: background.py  model_switch.py  session_panel.py  theme.py
tests/: test_streaming.py
